Fix wrap in code blocks

--- a/debian/styles.css
+++ b/debian/styles.css
@@ -47,6 +47,7 @@ pre {
     margin-right: 20px;
     border: 1px solid #e1e1e1;
     border-radius: 4px;
+    white-space: pre-wrap;
 }
 
 hr {
